	* Follow-up to #16111: Fixed display of group/db selector getting displayed below since this feature (e.g. sys_template.baseOn)

2010-11-16  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Updated Extbase and Fluid to 1.3.0beta1. See their ChangeLog for details.

2010-11-16  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16421: missing CSS style for pressed buttons in ExtJS / enable qtips / remove toolbar margin (Thanks to Fabien Udriot)
	* Fixed bug #16405: pageRenderer call addJsFile with leaving out 2nd parameter
	* Follow-up to #16408: Support for Custom Navigation Components: removed warning
	* Follow-up to #16315: New extension manager part 1: splitting classes: fixed many small issues
	* Added feature #16408: Support for Custom Navigation Components (Thanks to Stefan Galinski)
	* Added feature #16396: Implement a Grid View + wizard to enable the backend layout to be adapted to the frontend look and feel (Thanks to Joey Hasenau, Martin Ficzel and Thomas Hempel)

2010-11-15  Ingo Renner  <ingo@typo3.org>

	* Resolved issue #16388: Clean up installed services report

2010-11-15  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #14658: Feature: internal links with parameters outside the RTE (headlines, images ...)
	* Fixed bug #16383: BE Module are complicate to render

2010-11-15  Oliver Hader  <oliver@typo3.org>

	* Add feature #16374: Implement Inline Relational Record Editing (IRRE) in Workspaces

2010-11-15  Christian Kuhn  <lolli@schwarzbu.ch>

	* Added feature #16410: [Caching framework] Implement redis as cache backend

2010-11-15  Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #16403: Integrate modernizr into the TYPO3 Backend

2010-11-15  Ernesto Baschny  <ernst@cron-it.de>

	* Added feature #16170: Increase DB-fields spaceBefore and spaceAfter (tt_content) (Thanks to Henrik Ziegenhain)